Pull NLP additions (#141)
* added elasticsearch to backend; added basic functionality for elasticsearch's query_string query to account for possible multiple search terms with AND, OR, NOT and BOOST options

* ES: index name can now be configured via application.yml, basic implementation for document retrieval with boolean term declaration

* added functionality to highlight terms in the documents that were found

* generalized and improved ES query generation for phrases and terms

* implemented elasticsearch test containers

---------
Co-authored-by: Christoph Beger <ChristophB@users.noreply.github.com>